# RAG_LLM_universial

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  exceptions.py  main.py
app/api/: deps.py  schemas.py
app/api/routes/: chat.py  conversations.py  documents.py  health.py
app/core/embeddings/: __init__.py  base.py  factory.py  openai_compat.py  tei.py
app/core/llm/: __init__.py  base.py  factory.py  openai_compat.py
app/core/reranker/: __init__.py  base.py  dashscope_reranker.py  factory.py  noop.py
app/core/retrieval/: retriever.py
app/core/vectorstore/: __init__.py  base.py  factory.py  qdrant_store.py  redis_store.py
app/ingestion/: __init__.py  service.py  splitter.py
app/ingestion/loaders/: __init__.py  base.py
app/memory/: __init__.py  base.py  factory.py  memory_store.py  redis_store.py  sqlite_store.py
app/observability/: logging.py  middleware.py
app/prompts/: __init__.py  templates.py
app/services/: __init__.py  rag_service.py
docs/: USAGE.md
tests/: conftest.py  test_api.py  test_prompts.py  test_rag_service.py  test_redis_vectorstore.py  test_splitter.py  test_tei_embedding.py
