[project]
name = "rag-service"
version = "0.1.0"
description = "生产级 RAG+LLM 问答系统通用框架 (FastAPI + Qdrant + 阿里百炼/Qwen)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.3",
    "openai>=1.30",
    "qdrant-client>=1.12",
    "tenacity>=8.2",
    "aiosqlite>=0.19",
    "python-multipart>=0.0.9",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
